kubernetes/namespace.yaml
# Copyright 2026 Cisco Systems, Inc. and its affiliates
#
# SPDX-License-Identifier: Apache-2.0

apiVersion: v1
kind: Namespace
metadata:
  name: iris
  labels:
    app.kubernetes.io/part-of: iris
    pod-security.kubernetes.io/enforce: restricted
